[package]
name = "raytracer"
version = "0.1.0"
authors = ["Julia <juliariety@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.15.0"
lazy_static = "1.4.0"
nalgebra = "0.26.1"
rand = "0.8.3"

[profile.release]
lto = true
codegen-units = 1
